[project]
name = "claude-kanban"
version = "0.2.1"
description = "A real-time kanban dashboard for monitoring Claude Code sessions across multiple servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "paramiko>=4.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
claude-kanban = "claude_kanban.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_kanban"]
